fix: remove border and radius on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,10 @@ img {
   .modal {
     height: 100vh;
     width: 100vw;
+    border: none;
+  }
+  img {
+    border-radius: 0;
   }
   .left,
   .right {
